@@ -1,5 +1,5 @@
 /*
-    Copyright 2009, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2009-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -12,13 +12,15 @@
 
 
 #include <fost/config.hpp>
-#include <boost/function.hpp>
+#include <functional>
 
 
 namespace fostlib {
 
 
-    FOST_CORE_DECLSPEC void atexit( boost::function< void( void ) > function );
+    /// Register a function to be run before the program completes. Functions
+    /// are run in an uspecified order.
+    FOST_CORE_DECLSPEC void atexit(std::function<void(void)> function);
 
 
 }
