@@ -1,3 +1,6 @@
+2017-01-19  Kirit Saelensminde  <kirit@felspar.com>
+ Refactor `atexit` so it no longer uses Boost function.
+
 2017-01-13  Kirit Saelensminde  <kirit@felspar.com>
  * Refactor the logging messages to do fewer allocations.
  * Refactor the JSON parser to make it more composable.
